; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_getusername_malloc.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_getusername_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"USER\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getusername_malloc() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* @secure_getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i8*, i8** %2, align 8
  %8 = call i8* @strdup(i8* %7)
  store i8* %8, i8** %1, align 8
  br label %12

9:                                                ; preds = %0
  %10 = call i32 (...) @getuid()
  %11 = call i8* @uid_to_name(i32 %10)
  store i8* %11, i8** %1, align 8
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i8*, i8** %1, align 8
  ret i8* %13
}

declare dso_local i8* @secure_getenv(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @uid_to_name(i32) #1

declare dso_local i32 @getuid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
